# calaos-container

./: .gitignore  Makefile  README.md  calaos-container.toml  go.mod  go.sum  main.go
.devcontainer/: Dockerfile  devcontainer.json  setup-veth.service  setup_veth.sh
.github/workflows/: build-deb-push.yml  build-docker-base.yml  container-release.yml  release-deb.yml
app/: app.go  context.go  network.go  system.go  update.go
apt/: Makefile  apt-cache-file.cpp  apt-cache-file.h  apt.cpp  apt.go  apt.h  meson.build
cmd/calaos-os/: calaos-os.go
config/: config.go
debian/: calaos-boot.service  calaos-container.install  calaos-container.postrm.debhelper  calaos-container.service  calaos-container.substvars  calaos-home.service  calaos-server.service  calaos-web-app.service  control  debhelper-build-stamp  files  grafana.service  grub-btrfsd.service  haproxy.service  influxdb.service  mosquitto.service  rules  usb-serial-touchscreen@.service  zigbee2mqtt.service
docker/: Dockerfile  build-deb.sh  get_last_tag.py
env/: calaos.sh
grub-btrfs/: 41_snapshots-btrfs  config  grub-btrfsd
initramfs/hooks/: grub-btrfs-overlay
log/: format.go
models/: command.go  models.go  network.go  snapper.go  status.go  system.go  update.go
models/images/: images.go
repository/: calaos.gpg  calaos.list
scripts/: arch-chroot  calaos_install  calaos_install.sh  calaos_rollback.sh  config_calaos-boot  init_calaosfs  init_calaosfs.sh  load_containers_cache  mosquitto_pre.sh  pull_calaos_image  regctl  start_calaos_home.sh  start_z2mqtt.sh  x11docker  zigbee2mqtt_pre.sh
(+14 files in other folders)
